--- a/src/app/admin/statistics-dashboard/statistics-dashboard.component.html
+++ b/src/app/admin/statistics-dashboard/statistics-dashboard.component.html
@@ -1,4 +1,5 @@
 <!-- filepath: c:\Users\Mega-PC\Desktop\sawessi\pfe-frontend\src\app\admin\statistics-dashboard\statistics-dashboard.component.html -->
+<app-admin-navbar />
 <div class="stats-dashboard">
   <div class="dashboard-header">
     <h1 class="dashboard-title">Tableau de bord statistique</h1>
