--- a/src/app/enquete/enquete.component.html
+++ b/src/app/enquete/enquete.component.html
@@ -21,45 +21,15 @@
       </div>
       
       <div class="period-selector">
-        <div class="period-item">
-          <label class="period-label-fr">Trimestre</label>
-          <label class="period-label-ar">الثلاثية</label>
-          <div class="period-select">
-            <select class="form-control">
-              <option selected>1er Trimestre</option>
-              <option>2ème Trimestre</option>
-              <option>3ème Trimestre</option>
-              <option>4ème Trimestre</option>
-            </select>
-          </div>
-        </div>
-        <div class="period-item">
-          <label class="period-label-fr">Année</label>
-          <label class="period-label-ar">السنة</label>
-          <div class="period-select">
-            <select class="form-control">
-              <option>2023</option>
-              <option selected>2024</option>
-              <option>2025</option>
-            </select>
-          </div>
-        </div>
-        <div class="period-item gov-selector">
-          <label class="period-label-fr">Gouv:</label>
-          <div class="period-select">
-            <select class="form-control">
-              <option>Tunis</option>
-              <option>Sfax</option>
-              <option>Sousse</option>
-            </select>
-          </div>
-        </div>
+         
+        
+        
       </div>
     </div>
   
     <form [formGroup]="enqueteForm" (ngSubmit)="onSubmit()">
       <div class="visa-section">
-        <p class="visa-text">Visa n° 52/2005 du 14 Février 2005</p>
+        <p class="visa-text"></p>
       </div>
       
       <div class="enquete-section">
@@ -580,10 +550,7 @@
    </div>
    
    <div class="enqueteur-section">
-     <div class="enqueteur-field">
-       <label>Nom et prénom de l'enquêteur :</label>
-       <div class="signature-line"></div>
-     </div>
+     
    </div>
 
    <div class="form-actions">
