--- a/src/app/enquete/enquete.component.html
+++ b/src/app/enquete/enquete.component.html
@@ -135,6 +135,7 @@
               </label>
             </div>
           </div>
+          test
           <div class="radio-guide">(encadrer votre réponse)</div>
         </div>
         
